Fix production bug - header image is cut off on mobile

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,12 +21,12 @@
 .main_heading {
     color: #F5CB11;
     padding: 2rem 0rem 0rem 0rem;
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-align: center;
 }
 
 .header img {
-    max-width: 35vw;
+    max-width: 30vw;
     margin: auto;
     margin-top: 2rem;
 }
